fix vaccine boxes and spacing

--- a/ui-react/src/App.css
+++ b/ui-react/src/App.css
@@ -19,12 +19,11 @@ p {
 
 h2 {
   font-size: 24px;
-  margin-top: 20px;
+  margin-top: 8px;
 }
 
 a {
   display: inline-block;
-  margin-top: 10px;
   color: #007bff;
   text-decoration: none;
 }
@@ -36,10 +35,6 @@ a:hover {
 ul {
   list-style-type: none;
   padding: 0;
-}
-
-li {
-  margin-bottom: 20px;
 }
 
 .vaccine-info p {
@@ -70,16 +65,11 @@ li {
 .vaccine-disease {
   font-size: 18px;
   font-weight: bold;
-  margin-bottom: 8px;
 }
 
 .vaccine-recommendations {
   font-size: 16px;
-  margin-bottom: 16px;
-}
-
-.dosage-item {
-  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .dosage-box {
